--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
+    "react-select": "^5.8.1",
+    "react-select-country-list": "^2.2.3",
+    "react-toastify": "^10.0.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
